--- a/data-retention.html
+++ b/data-retention.html
@@ -813,6 +813,18 @@
                                                                                 <option>Every “X” Hours</option>
                                                                             </select>
 
+                                                                            <select id="ddl_frequencyHrs"
+                                                                                class="custom-select custom-select-arrow mid-width-select mt-3"
+                                                                                style="font-family: 'proxima-regular' !important;">
+                                                                                <option
+                                                                                    style="font-family: 'proxima-regular' !important;">
+                                                                                    Frequency (Hrs)</option>
+                                                                                <option
+                                                                                    style="font-family: 'proxima-regular' !important;">
+                                                                                    Daily </option>
+                                                                                <option>Every “X” Hours</option>
+                                                                            </select>
+
                                                                             <div
                                                                                 class="week-check-boxs-wrapper col-8 pl-0 pr-0">
                                                                                 <a id="link_mon" href="#">M</a>
@@ -834,9 +846,9 @@
                                                                           </p> -->
                                                                         </div>
                                                                         <div class="hrs-select-group col-6 pl-0 pr-0">
-                                                                            <!-- <div
+                                                                            <div
                                                                                 style="flex: 1 0 auto; margin-right: 10px;">
-                                                                                Starting from:</div> -->
+                                                                                Starting from:</div>
                                                                             <select id="ddl_hourSelect"
                                                                                 class="custom-select custom-select-arrow-small">
                                                                                 <option>Hr</option>
