--- a/discovery-events.html
+++ b/discovery-events.html
@@ -711,7 +711,7 @@
 
                                                                             <div class="search-wrap border">
                                                                                 <input type="text"
-                                                                                    placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
+                                                                                    placeholder="Search Discovery Events"
                                                                                     class="search-field">
                                                                                 <a href="#" id="link_arrow-icon"
                                                                                     class="search-query-dropdown-btn">
@@ -873,31 +873,31 @@
                                                                                 <th>&nbsp;</th>
                                                                                 <th>Start Date
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>End Date
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Connector
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Instance Label
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Result
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
