--- a/policy-events.html
+++ b/policy-events.html
@@ -711,7 +711,7 @@
 
                                                                             <div class="search-wrap border">
                                                                                 <input type="text"
-                                                                                    placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
+                                                                                    placeholder="Search Policy Events"
                                                                                     class="search-field">
                                                                                 <a href="#" id="link_arrow-icon"
                                                                                     class="search-query-dropdown-btn">
@@ -873,43 +873,43 @@
                                                                                 <th>&nbsp;</th>
                                                                                 <th>Status
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Successful / Total
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Name
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Main Action
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Triggered Query Name
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Started
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
                                                                                 <th>Completed
                                                                                     <a href="#">
-                                                                                        <img
+                                                                                        <img style="width: 15px !important;"
                                                                                             src="images/filter-table-icon.svg">
                                                                                     </a>
                                                                                 </th>
