--- a/data-retention.html
+++ b/data-retention.html
@@ -801,29 +801,34 @@
                                                                         </p>
 
                                                                         <div class="form-group mt-3">
-                                                                            <select id="ddl_daysWeek"
-                                                                                class="custom-select col-8"
-                                                                                style="font-family: 'proxima-regular' !important;">
-                                                                                <option
+                                                                            <div>
+                                                                                <select id="ddl_daysWeek"
+                                                                                    class="custom-select col-8"
                                                                                     style="font-family: 'proxima-regular' !important;">
-                                                                                    Days of the Week</option>
-                                                                                <option
-                                                                                    style="font-family: 'proxima-regular' !important;">
-                                                                                    Daily </option>
-                                                                                <option>Every “X” Hours</option>
-                                                                            </select>
+                                                                                    <option
+                                                                                        style="font-family: 'proxima-regular' !important;">
+                                                                                        Days of the Week</option>
+                                                                                    <option
+                                                                                        style="font-family: 'proxima-regular' !important;">
+                                                                                        Daily </option>
+                                                                                    <option>Every “X” Hours</option>
+                                                                                </select>
+                                                                            </div>
 
-                                                                            <select id="ddl_frequencyHrs"
-                                                                                class="custom-select custom-select-arrow mid-width-select mt-3"
-                                                                                style="font-family: 'proxima-regular' !important;">
-                                                                                <option
+                                                                            <div>
+                                                                                <select id="ddl_frequencyHrs"
+                                                                                    class="custom-select custom-select-arrow mid-width-select mt-3"
                                                                                     style="font-family: 'proxima-regular' !important;">
-                                                                                    Frequency (Hrs)</option>
-                                                                                <option
-                                                                                    style="font-family: 'proxima-regular' !important;">
-                                                                                    Daily </option>
-                                                                                <option>Every “X” Hours</option>
-                                                                            </select>
+                                                                                    <option
+                                                                                        style="font-family: 'proxima-regular' !important;">
+                                                                                        Frequency (Hrs)</option>
+                                                                                    <option
+                                                                                        style="font-family: 'proxima-regular' !important;">
+                                                                                        Daily </option>
+                                                                                    <option>Every “X” Hours</option>
+                                                                                </select>
+                                                                            </div>
+
 
                                                                             <div
                                                                                 class="week-check-boxs-wrapper col-8 pl-0 pr-0">
