--- a/data-retention.html
+++ b/data-retention.html
@@ -710,9 +710,22 @@
                                                                             <!-- <span>(Optional)</span> -->
                                                                         </h3>
 
-                                                                        <input id="input_items" type="text"
-                                                                            class="form-control mb-3 col-6"
-                                                                            placeholder="30">
+                                                                        <div>
+                                                                            <input id="input_items" type="text"
+                                                                                class="form-control mb-3 col-6"
+                                                                                placeholder="30">
+
+                                                                        </div>
+                                                                        <div class="number-type-arrows col-2 p-0">
+                                                                            <input id="input_items" type="text"
+                                                                                class="form-control mb-3 "
+                                                                                placeholder="30">
+                                                                            <img class="greater-arrow"
+                                                                                src="images/greater-arrow.svg" alt="">
+                                                                            <img class="less-arrow"
+                                                                                src="images/less-arrow.svg" alt="">
+                                                                        </div>
+
 
 
                                                                         <div class="d-flex align-items-center">
@@ -785,6 +798,7 @@
                                                                             <input id="rbt_doNotSaveHistoricalData"
                                                                                 type="radio" name="gender" checked=""
                                                                                 value="male">
+
                                                                             <label for="male">Do not save historical
                                                                                 Data</label>
                                                                         </p>
