--- a/data-retention.html
+++ b/data-retention.html
@@ -716,7 +716,7 @@
                                                                                 placeholder="30">
 
                                                                         </div>
-                                                                        <div class="number-type-arrows col-2 p-0">
+                                                                        <!-- <div class="number-type-arrows col-2 p-0">
                                                                             <input id="input_items" type="text"
                                                                                 class="form-control mb-3 "
                                                                                 placeholder="30">
@@ -724,7 +724,7 @@
                                                                                 src="images/greater-arrow.svg" alt="">
                                                                             <img class="less-arrow"
                                                                                 src="images/less-arrow.svg" alt="">
-                                                                        </div>
+                                                                        </div> -->
 
 
 
