--- a/no-results-modal.html
+++ b/no-results-modal.html
@@ -60,7 +60,7 @@
                     <div class="modal-body">
                         <div class="lets-get-started-modal-wrapper">
                             <div class="lets-get-modal-header">
-                                <div class="adapter-modal-name ">
+                                <div class="adapter-modal-name result-title">
 
                                     <p class="mb-2">Your Filter returned</p>
                                     no results.
@@ -68,7 +68,7 @@
                             </div>
                             <div class="lets-get-close">
                                 <button id="btn_closeIcon" type="button" class="close no-btn modal-close-btn"
-                                    data-dismiss="modal" style="top: 12px; right: 12px;">
+                                    data-dismiss="modal" style="top: 15px; right: 15px;">
                                     <span>
                                         <img src="images/modal-close.svg" />
                                     </span>
@@ -86,7 +86,7 @@
                                             Please change your filter and try again
                                         </p>
                                         <button id="btn_retry"
-                                            class="theme-btn graydient-primary-btn w-50 mt-4">Retry</button>
+                                            class="theme-btn graydient-primary-btn w-60 mt-4">Retry</button>
                                     </div>
 
                                 </div>
