--- a/export-text-links.html
+++ b/export-text-links.html
@@ -286,11 +286,11 @@
                                                     <h2 class="assets-details-modal-title">Network Interfaces</h2>
                                                 </div>
                                                 <div class="btn-links-wrapper">
-                                                    <!-- <button id="btn_clearAallFilters" type="button" class="cancel-btn">
+                                                    <button id="btn_clearAallFilters" type="button" class="cancel-btn">
                                                         <img src="images/clear-filter-icon.svg" class="mr-2"
                                                             style="width: 18px; height:18px"> Clear All Filters
-                                                    </button> 
-                                                    <span style="color: #4c4c4c;">|</span>-->
+                                                    </button>
+                                                    <span style="color: #4c4c4c;">|</span>
                                                     <button id="btn_clearAallFilters" type="button" class="cancel-btn">
                                                         <img src="images/export-csv-icon.svg" class="mr-2"
                                                             style="width: 18px; height:18px"> Export CSV
@@ -301,10 +301,10 @@
                                                             style="width: 18px; height:18px"> Expand All
                                                     </button>
 
-                                                    <!-- <button id="btn_clearAallFilters" type="button" class="cancel-btn">
-                                                        <img src="images/collapse-all-icon.svg" class="mr-2"
+                                                    <button id="btn_clearAallFilters" type="button" class="cancel-btn">
+                                                        <img src="images/collapse-all-icon.svg" class="mr-2 ml-3"
                                                             style="width: 18px; height:18px"> Collapse All
-                                                    </button> -->
+                                                    </button>
 
                                                 </div>
 
