--- a/warning-modal-2.html
+++ b/warning-modal-2.html
@@ -80,8 +80,8 @@
                                         <img src="images/icon_warning.svg" />
                                     </div>
                                     <div class="ml-2">
-                                        <h1 class="mb-4">Your Session is about to expire due to
-                                            inactivity</h1>
+                                        <h1 class="mb-4">One of the vInventa Administrators has enabled Maintenance Mode
+                                        </h1>
                                         <p>You will be logged out in 60 seconds</p>
                                     </div>
                                 </div>
@@ -90,9 +90,8 @@
                                     <button id="btn_logOutNow" type="button" class="theme-btn graydient-secondary-btn">
                                         Log Out Now
                                     </button>
-                                    <button id="btn_keepMeSignedIn" type="button"
-                                        class="theme-btn graydient-primary-btn">
-                                        Keep me signed in
+                                    <button id="btn_close" type="button" class="theme-btn graydient-primary-btn">
+                                        Close
                                     </button>
                                 </div>
 
