--- a/warning-modal-3.html
+++ b/warning-modal-3.html
@@ -80,19 +80,18 @@
                                         <img src="images/icon_warning.svg" />
                                     </div>
                                     <div class="ml-2">
-                                        <h1 class="mb-4">Your Session is about to expire due to
-                                            inactivity</h1>
-                                        <p>You will be logged out in 60 seconds</p>
+                                        <h1 class="mb-4">Your Sign-in Session has expired
+                                        </h1>
+                                        <p>Please Sign in again.</p>
                                     </div>
                                 </div>
 
                                 <div class="search-section-buttons policy-btns-wrapper mt-5 mb-3">
-                                    <button id="btn_logOutNow" type="button" class="theme-btn graydient-secondary-btn">
-                                        Log Out Now
+                                    <button id="btn_close" type="button" class="theme-btn graydient-secondary-btn">
+                                        Close
                                     </button>
-                                    <button id="btn_keepMeSignedIn" type="button"
-                                        class="theme-btn graydient-primary-btn">
-                                        Keep me signed in
+                                    <button id="btn_signInAgain" type="button" class="theme-btn graydient-primary-btn">
+                                        Sign in Again
                                     </button>
                                 </div>
 
