--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -716,6 +716,16 @@
                                             <div class="list-view-hover-wrapper">
                                                 <div class="content-wrapper">
                                                     <div class="dropdowns-wrapper no-border p-0">
+                                                        <div class="adapter-modal-help-box">
+                                                            <button id="btn_closeIcon" type="button"
+                                                                class="close no-btn modal-close-btn"
+                                                                data-dismiss="modal"
+                                                                style="top: 36px !important; right: 36px!important;">
+                                                                <span>
+                                                                    <img src="images/modal-close.svg">
+                                                                </span>
+                                                            </button>
+                                                        </div>
                                                         <div class="dropdown-main-div">
                                                             <div class="dropdown-div mr-4 margin-b">
                                                                 <div class="dropdwon-top">
