--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -716,7 +716,7 @@
                                             <div class="list-view-hover-wrapper">
                                                 <div class="content-wrapper">
                                                     <div class="dropdowns-wrapper no-border p-0">
-                                                        <div class="adapter-modal-help-box">
+                                                        <div class="list-view-hover-cross-btn mb-4">
                                                             <button id="btn_closeIcon" type="button"
                                                                 class="close no-btn modal-close-btn"
                                                                 data-dismiss="modal"
@@ -2119,8 +2119,7 @@
                                                                 </span>
                                                             </a>
                                                         </div>
-                                                        <div id="collapseOneA" class="accordion-body collapse show"
-                                                            style="">
+                                                        <div id="collapseOneA" class="accordion-body collapse show">
                                                             <div class="accordion-inner">
                                                                 <!-- view box row -->
                                                                 <div class="view-boxs-wrapper">
@@ -2172,7 +2171,15 @@
                                             aria-labelledby="v-pills-messages-tab">
 
                                             <div class="list-view-hover-wrapper">
-
+                                                <div class="list-view-hover-cross-btn mb-4">
+                                                    <button id="btn_closeIcon" type="button"
+                                                        class="close no-btn modal-close-btn" data-dismiss="modal"
+                                                        style="top: 36px !important; right: 36px!important;">
+                                                        <span>
+                                                            <img src="images/modal-close.svg">
+                                                        </span>
+                                                    </button>
+                                                </div>
                                                 <!-- view box row -->
                                                 <div class="view-boxs-wrapper">
                                                     <div class="view-box p-0 no-border">
